--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name":"tim1020/phpec",
     "description":"一个简单易用、功能完整的轻量级开发框架",
     "require": {
+        "monolog/monolog":"2.0.*"
     },
     "autoload": {
         "psr-4":{
