--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name":"tim1020/phpec",
     "description":"一个简单易用、功能完整的轻量级开发框架",
     "require": {
-        "monolog/monolog":"2.0.*"
+        "monolog/monolog":"2.0.*",
+        "particle/validator":"^2.0"
     },
     "autoload": {
         "psr-4":{
